// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar Container NavigationBar component should match snapshot when user is logged in 1`] = `
<header
  className="header"
>
  <Link
    to="/"
  >
    <Route
      path={
        Array [
          "/login",
          "/movies/:id",
        ]
      }
      render={[Function]}
    />
  </Link>
  <h1
    className="welcome-user"
  >
    Welcome 
    Marge
  </h1>
  <Link
    to="/"
  >
    <button
      className="logout-button"
      onClick={[Function]}
    >
      Log Out
    </button>
  </Link>
</header>
`;

exports[`NavigationBar Container NavigationBar component should match the NavigationBar Snapshot when no one is logged in 1`] = `
<header
  className="header"
>
  <Link
    to="/"
  >
    <Route
      path={
        Array [
          "/login",
          "/movies/:id",
        ]
      }
      render={[Function]}
    />
  </Link>
  <Link
    to="/login"
  >
    <button
      className="login-button"
    >
      Log In
    </button>
  </Link>
</header>
`;
